--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,44 @@ body {
   background-image: url("https://habrastorage.org/webt/y7/rx/av/y7rxavmwlct3n-bqq-fshqjv_ig.jpeg");
   margin: 0;
 }
-.main{
+.author-text{
+  font-size: 25px;
+}
+.text-news{
+  width: 500px;
+  margin: auto;
+  font-size: 25px;
+}
+.title-news{
+  color: white;
+  text-align: center;
+}
+.btn{
+  width: 150px;
+  height: 50px;
+  border-radius: 10px;
+}
+span{
+  font-size: 15px;
+  font-weight: bold;
+}
+.form{
+  width: 500px;
+  margin: auto;
+  color: white;
+}
+.form{
+  width: 300px;
+  margin: auto;
+}
+.input{
+  height: 30px;
+  width: 300px;
+  border-radius: 5px;
+}
+.comment-text{
+}
+.main {
   width: 800px;
   margin: auto;
 }
@@ -16,37 +53,43 @@ header a {
   color: white;
   font-size: 25px;
 }
-.navbar{
+.navbar {
   text-align: center;
   padding-bottom: 25px;
 }
-header{
+header {
   background-color: blue;
   opacity: 0.7;
- position: sticky;
+  position: sticky;
   top: 1px;
 }
-.comment{
-  color: white;
+.comment {
+  color: black;
+  text-align: center;
+  font-size: 20px;
+  background-color: azure;
+  width: 300px;
+  margin: auto;
+  border-radius: 15px;
 }
-.content{
+.content {
   margin-top: 50px;
   color: white;
   text-align: center;
   font-size: 25px;
   padding: 15px 0;
 }
-a{
+a {
   text-decoration: none;
   color: white;
 }
-.ssilki{
+.ssilki {
   margin-top: 25px;
 }
-.infoNews{
+.infoNews {
   color: white;
 }
-img{
+img {
   width: 100%;
   border-radius: 10px;
 }
