--- a/views/home.hbs
+++ b/views/home.hbs
@@ -13,22 +13,24 @@
     <div class="img-block">
       <img
         src="https://topspb.tv/media/768x432/programs_covers/novosti.png"
-        alt=""/>
+        alt=""
+      />
     </div>
     <div class="text-block">
       <p class="infoNews">
-        Описание новостного сайта
-        Новостной сайт — это интернет-издание, 
-        специализация которого заключается в сборе и
-        выдаче общетематических новостей или новостных 
-        материалов на одну тему. Новостные сайты могут 
-        принадлежать СМИ, которые изначально не специализировались 
-        на интернет-публикациях (АиФ, Forbes, Комсомольская правда и т. д.)
+        Описание новостного сайта Новостной сайт — это интернет-издание,
+        специализация которого заключается в сборе и выдаче общетематических
+        новостей или новостных материалов на одну тему. Новостные сайты могут
+        принадлежать СМИ, которые изначально не специализировались на
+        интернет-публикациях (АиФ, Forbes, Комсомольская правда и т. д.)
       </p>
     </div>
     <div class="img-block">
-      <img src="https://i.ytimg.com/vi/uCUIL8-bSNg/sddefault.jpg" alt="">
-      <img src="https://cdn25.img.ria.ru/images/07e5/05/14/1733173627_0:52:3071:1780_1920x0_80_0_0_4c00a7025448352e94166e2c65fb05d0.jpg" alt="">
+      <img src="https://i.ytimg.com/vi/uCUIL8-bSNg/sddefault.jpg" alt="" />
+      <img
+        src="https://cdn25.img.ria.ru/images/07e5/05/14/1733173627_0:52:3071:1780_1920x0_80_0_0_4c00a7025448352e94166e2c65fb05d0.jpg"
+        alt=""
+      />
     </div>
   </div>
 </div>
